# dispersion

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bckup.out  bckup.out2  build.sh  compute.py  environment.yml  notes.md  og_ccls  pyproject.toml  setup.py
.github/workflows/: pip.yml  wheels.yml
pydispersion/: __init__.py  compute.py  utils.py
src/: binder.cpp  constants.hpp  disp.cpp  disp.hpp  disp_tmp.cpp  r4r2.hpp
tests/: .EDISP  test_basic.py
